# hundzula-2024-reproducible-nlp

./: .gitignore  LICENSE  Makefile  README.md  dvc.yaml  params.yaml  prompts.md  pyproject.toml  requirements.txt  setup.py
data/interim/: .gitignore
data/raw/: .gitignore  kaggle-spam-collection-data.zip.dvc
docs/: Makefile  commands.rst  conf.py  dvc-features-notes.rst  dvc-step-by-step.rst  index.rst  make.bat
notebooks/: 1.0-nn-comet-optimizer-keras-example.ipynb  1.0-nn-english-fake-news-detection-lstm.ipynb  1.0-nn-example_Comet_with_Hugging_Face.ipynb  1.0-nn-fake-news-detection-mlp.ipynb  1.0-nn-spam-detection-auto-log.ipynb  1.0-nn-spam-detection.ipynb  1.0-nn-tshivenda-fake-news-detection-lstm.ipynb
scripts/: download_fake_news.py  get_data.sh  install.sh
src/: evaluate.py  featurization.py  prepare.py  train.py
