[tool.poetry]
name = "hundzula-2024-reproducible-nlp"
version = "0.1.0"
description = ""
authors = ["ndamulelo <nbanzyme@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.3"
pandas = "^2.2.0"
scikit-learn = "^1.4.0"
comet-ml = "^3.37.1"
jupyterlab = "^4.1.0"
dvc = "^3.43.1"
click = "^8.1.7"
python-dotenv = "^1.0.1"
matplotlib = "^3.8.2"
pyyaml = "^6.0.1"
dvclive = "^3.41.1"
nltk = "^3.8.1"


[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
pytest = "^8.0.0"
coverage = "^7.4.1"
flake8 = "^7.0.0"
pydrive = "^1.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
